--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -6,6 +6,10 @@ body {
     color: $dark-gray;
     background-color: #08020d;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
 }
 h1,
 h2 {
@@ -57,4 +61,32 @@ h2 {
 
 .start-9 {
     grid-column-start: 9;
+}
+
+.btn {
+    padding: 20px 30px;
+    border-radius: 5px;
+    background: none;
+    border: 1px solid $white;
+    color: inherit;
+    text-transform: uppercase;
+    width: 100%;
+    text-align: center;
+}
+
+.upper {
+    text-transform: uppercase;
+}
+
+p {
+    margin-block: 0;
+    margin-inline: 0;
+}
+
+.mt-4 {
+    margin-top: 40px;
+}
+
+.mr-5 {
+    margin-right: 50px;
 }
