--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -8,6 +8,11 @@
 
 .hero {
     padding: 200px 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     .hero-content {
         display:flex;
         flex-direction: column;
