--- a/src/scss/pricing.scss
+++ b/src/scss/pricing.scss
@@ -17,7 +17,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .cards .pricing-item {
