--- a/src/scss/pricing.scss
+++ b/src/scss/pricing.scss
@@ -9,7 +9,7 @@
 }
 
 .page-pricing h2 {
-    font-size: 2rem;;
+    font-size: 2rem;
 }
 
 .page-pricing .cards {
@@ -33,8 +33,10 @@
 
 .pricing-item h3 {
     padding-bottom: 200px;
+    padding-top: 24px;
     font-size: 24px;
     line-height: 36px;
+    font-weight: normal;
 }
 
 .pricing-item .btn {
