--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -23,7 +23,7 @@
 .news-item .news-body {
     flex-direction: column;
     align-items: normal;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .news-item .btn {
