--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,1 +1,9 @@
-@import './general.scss', './variables.scss', './header.scss', './hero.scss', './pricing.scss', './news.scss', './page-app.scss';
+@import
+'./general.scss',
+'./variables.scss',
+'./header.scss',
+'./hero.scss',
+'./pricing.scss',
+'./news.scss',
+'./page-app.scss',
+'./footer.scss';
