--- a/src/scss/artist.scss
+++ b/src/scss/artist.scss
@@ -1,6 +1,7 @@
 @import
 './artist/hero.scss',
-'./artist/popular-track.scss';
+'./artist/popular-track.scss',
+'./artist/discography.scss';
 
 h2 {
     font-size: 38px;
