--- a/src/css/app.css
+++ b/src/css/app.css
@@ -88,6 +88,10 @@ h2 {
   text-transform: uppercase;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
 p {
   margin-block: 0;
   margin-inline: 0;
