--- a/src/scss/artist.scss
+++ b/src/scss/artist.scss
@@ -1,7 +1,8 @@
 @import
 './artist/hero.scss',
 './artist/popular-track.scss',
-'./artist/discography.scss';
+'./artist/discography.scss',
+'./artist/similar.scss';
 
 h2 {
     font-size: 38px;
