--- a/src/scss/artist/popular-track.scss
+++ b/src/scss/artist/popular-track.scss
@@ -1,4 +1,5 @@
 @import '../variables.scss';
+@import './common.scss';
 
 .page-popular-track {
     padding-top: 100px;
@@ -52,9 +53,7 @@
     }
 
     .page-popular-track h2 {
-        padding: 0 20px;
-        font-size: 18px;
-        line-height: 27px;
+        @include h2-small;
     }    
 }
 
